plugins/warp/tests/snapshots/determinism___fptostr.obj.snap
---
source: plugins/warp/tests/determinism.rs
expression: functions
---
{
    180832: FunctionGUID {
        guid: 9d4dba66-7106-5215-8e64-a47279f67dfe,
    },
}
