plugins/warp/tests/snapshots/determinism___strnicm.obj.snap
---
source: plugins/warp/tests/determinism.rs
expression: functions
---
{
    65728: FunctionGUID {
        guid: 7c350a2d-2282-5625-943e-009f317b8d2c,
    },
}
