plugins/warp/tests/snapshots/determinism___wctype.obj.snap
---
source: plugins/warp/tests/determinism.rs
expression: functions
---
{
    181536: FunctionGUID {
        guid: 29690354-fa27-54d1-a8be-18535b19b1c3,
    },
    181856: FunctionGUID {
        guid: 1e794537-6289-59e7-bef9-0c72f3989db8,
    },
    182544: FunctionGUID {
        guid: 6abe3fc2-6d29-5fde-a31e-bb8249db6bf9,
    },
    182896: FunctionGUID {
        guid: 13b16f81-0c6f-5aee-ad9f-0d142658cf18,
    },
    183200: FunctionGUID {
        guid: 8a2b7bda-5fdb-5ba3-888b-20d5b8d7b2cd,
    },
    183536: FunctionGUID {
        guid: 3cc2e827-b707-5c9d-82e9-d76ac3abc904,
    },
    183872: FunctionGUID {
        guid: 1b434f0e-26b8-539b-9679-33d96a683190,
    },
    184208: FunctionGUID {
        guid: b3723a76-a709-510c-9d93-97dc42b163a3,
    },
    184544: FunctionGUID {
        guid: 576f40fd-30a0-53af-8102-7e1b5298d38a,
    },
    184960: FunctionGUID {
        guid: 33ce8a60-e3fa-5941-9ca6-09707bb1f579,
    },
    185280: FunctionGUID {
        guid: b2339a04-7dcf-5791-b74e-806220d37f56,
    },
    185600: FunctionGUID {
        guid: b08dcc9b-b766-56e0-a9af-1d24cc6c6574,
    },
    185952: FunctionGUID {
        guid: 1e34d278-fd31-5cdf-98dc-395cb29419a7,
    },
    186272: FunctionGUID {
        guid: 1b434f0e-26b8-539b-9679-33d96a683190,
    },
    186624: FunctionGUID {
        guid: b3723a76-a709-510c-9d93-97dc42b163a3,
    },
    186976: FunctionGUID {
        guid: eed08c42-3616-5c27-82ad-719db5cce36e,
    },
    187296: FunctionGUID {
        guid: 23ba7382-bd48-5d47-a1f0-79ad5db87730,
    },
    187616: FunctionGUID {
        guid: 90cb6aa0-f402-5874-ae2d-e10752ad6462,
    },
    187936: FunctionGUID {
        guid: 75b0aba8-582a-5085-abbb-cebf55d2498d,
    },
    188256: FunctionGUID {
        guid: cc259c7e-0ada-5680-8ad7-b077d60bd2a1,
    },
    188576: FunctionGUID {
        guid: 607a10c5-8943-5dec-b888-f5210f08b311,
    },
    188896: FunctionGUID {
        guid: f6535880-21d4-5272-b2c0-5e63cbc208e7,
    },
    189216: FunctionGUID {
        guid: 9dd8ec46-e680-5fbe-b28b-30505b505fa3,
    },
    189552: FunctionGUID {
        guid: b098f8a1-ecdd-5938-8da3-bb37935c6b7e,
    },
    189856: FunctionGUID {
        guid: 33ce8a60-e3fa-5941-9ca6-09707bb1f579,
    },
    190160: FunctionGUID {
        guid: b2339a04-7dcf-5791-b74e-806220d37f56,
    },
    190464: FunctionGUID {
        guid: 6cebba56-9929-5f3d-9dd3-fc56f8e84593,
    },
    190768: FunctionGUID {
        guid: b08dcc9b-b766-56e0-a9af-1d24cc6c6574,
    },
    191088: FunctionGUID {
        guid: 1e34d278-fd31-5cdf-98dc-395cb29419a7,
    },
    191392: FunctionGUID {
        guid: eed08c42-3616-5c27-82ad-719db5cce36e,
    },
    191696: FunctionGUID {
        guid: 23ba7382-bd48-5d47-a1f0-79ad5db87730,
    },
    192000: FunctionGUID {
        guid: 90cb6aa0-f402-5874-ae2d-e10752ad6462,
    },
    192304: FunctionGUID {
        guid: 75b0aba8-582a-5085-abbb-cebf55d2498d,
    },
    192608: FunctionGUID {
        guid: cc259c7e-0ada-5680-8ad7-b077d60bd2a1,
    },
    192912: FunctionGUID {
        guid: 607a10c5-8943-5dec-b888-f5210f08b311,
    },
    193216: FunctionGUID {
        guid: f6535880-21d4-5272-b2c0-5e63cbc208e7,
    },
    193520: FunctionGUID {
        guid: 9dd8ec46-e680-5fbe-b28b-30505b505fa3,
    },
}
